Мелкие фиксы ссылок и подключение скрипта дял страницы каталога

--- a/product.html
+++ b/product.html
@@ -19,7 +19,7 @@
                     <nav class="header__top-nav">
                         <ul class="header__top-list">
                             <li class="header__top-item">
-                                <a class="header__top-link actions" href="#">
+                                <a class="header__top-link actions" href="./sale.html">
                                     Акции
                                     <svg width="9" height="12" viewBox="0 0 9 12" fill="none"
                                         xmlns="http://www.w3.org/2000/svg">
@@ -28,43 +28,43 @@
                                 </a>
                             </li>
                             <li class="header__top-item">
-                                <a class="header__top-link" href="#">Оплата</a>
+                                <a class="header__top-link" href="./payment.html">Оплата</a>
                             </li>
                             <li class="header__top-item">
-                                <a class="header__top-link" href="#">Доставка</a>
+                                <a class="header__top-link" href="./delivery.html">Доставка</a>
                             </li>
                             <li class="header__top-item">
-                                <a class="header__top-link" href="#">Каталог</a>
+                                <a class="header__top-link" href="./catalog.html">Каталог</a>
                             </li>
                             <li class="header__top-item">
-                                <a class="header__top-link" href="#">Контакты</a>
+                                <a class="header__top-link" href="./contacts.html">Контакты</a>
                             </li>
                         </ul>
                         <div class="header__top-info">
-                            <a class="header__top-link header__top-link--info" href="#">
+                            <a class="header__top-link header__top-link--info">
                                 Информация для клиентов и партнеров
                             </a>
                             <ul class="header__top-info-dropdown">
                                 <li>
-                                    <a href="#">О компании</a>
+                                    <a href="./about.html">О компании</a>
                                 </li>
                                 <li>
-                                    <a href="#">Новости</a>
+                                    <a href="./news.html">Новости</a>
                                 </li>
                                 <li>
-                                    <a href="#">Бонусная программа</a>
+                                    <a href="./bonus.html">Бонусная программа</a>
                                 </li>
                                 <li>
-                                    <a href="#">Обмен и возврат товара</a>
+                                    <a href="./return.html">Обмен и возврат товара</a>
                                 </li>
                                 <li>
-                                    <a href="#">Сервисные центры</a>
+                                    <a href="./service.html">Сервисные центры</a>
                                 </li>
                                 <li>
-                                    <a href="#">Конфиденциальность</a>
+                                    <a href="./confidence.html">Конфиденциальность</a>
                                 </li>
                                 <li>
-                                    <a href="#">Обратная связь</a>
+                                    <a href="./feedback.html">Обратная связь</a>
                                 </li>
                             </ul>
                         </div>
@@ -148,7 +148,7 @@
                                     </div>
 
                                 </div>
-                                <a class="rect-btn rect-btn--search-result blue" href="#">Все результаты</a>
+                                <a class="rect-btn rect-btn--search-result blue" href="./search.html">Все результаты</a>
                             </div>
                         </form>
 
@@ -181,13 +181,13 @@
                                 </div>
                             </div>
                             <div class="header-panel__item">
-                                <a class="round-btn round-btn--header" href="#">
+                                <a class="round-btn round-btn--header" href="./favorites.html">
                                     <img src="./img/icons/heart.svg" alt="Избранное">
                                 </a>
                                 <span>5</span>
                             </div>
                             <div class="header-panel__item">
-                                <a class="round-btn round-btn--header" href="#">
+                                <a class="round-btn round-btn--header" href="./compare.html">
                                     <img src="./img/icons/compare.svg" alt="Сравнение">
                                 </a>
                                 <span>99</span>
@@ -313,7 +313,7 @@
                                                     0 ₽
                                                 </p>
                                             </div>
-                                            <a class="rect-btn rect-btn--cart-popup blue" href="#">
+                                            <a class="rect-btn rect-btn--cart-popup blue" href="./catalog.html">
                                                 Перейти в каталог
                                             </a>
                                         </div>
@@ -458,13 +458,13 @@
                                 </div>
                             </div>
                             <div class="header-panel__item">
-                                <a class="round-btn round-btn--header" href="#">
+                                <a class="round-btn round-btn--header" href="./favorites.html">
                                     <img src="./img/icons/heart.svg" alt="Избранное">
                                 </a>
                                 <span>5</span>
                             </div>
                             <div class="header-panel__item">
-                                <a class="round-btn round-btn--header" href="#">
+                                <a class="round-btn round-btn--header" href="./compare.html">
                                     <img src="./img/icons/compare.svg" alt="Сравнение">
                                 </a>
                                 <span>99</span>
@@ -590,7 +590,7 @@
                                                     0 ₽
                                                 </p>
                                             </div>
-                                            <a class="rect-btn rect-btn--cart-popup blue" href="#">
+                                            <a class="rect-btn rect-btn--cart-popup blue" href="./catalog.html">
                                                 Перейти в каталог
                                             </a>
                                         </div>
@@ -1034,7 +1034,7 @@
                                     </div>
 
                                 </div>
-                                <a class="rect-btn rect-btn--search-result blue" href="#">Все результаты</a>
+                                <a class="rect-btn rect-btn--search-result blue" href="./search.html">Все результаты</a>
                             </div>
                         </form>
                     </div>
@@ -1095,7 +1095,7 @@
                                     </a>
                                 </li>
                                 <li class="header-menu__nav-item">
-                                    <a class="header-menu__nav-link header-menu__nav-link--show" href="#">
+                                    <a class="header-menu__nav-link header-menu__nav-link--show" href="./catalog.html">
                                         Показать все
                                     </a>
                                 </li>
@@ -1107,27 +1107,27 @@
                             </h4>
                             <ul class="header-menu__nav-list">
                                 <li class="header-menu__nav-item">
-                                    <a class="header-menu__nav-link" href="#">
+                                    <a class="header-menu__nav-link" href="./delivery.html">
                                         Доставка
                                     </a>
                                 </li>
                                 <li class="header-menu__nav-item">
-                                    <a class="header-menu__nav-link" href="#">
+                                    <a class="header-menu__nav-link" href="./guarantee.html">
                                         Гарантия
                                     </a>
                                 </li>
                                 <li class="header-menu__nav-item">
-                                    <a class="header-menu__nav-link" href="#">
+                                    <a class="header-menu__nav-link" href="./service.html">
                                         Сервисные центры
                                     </a>
                                 </li>
                                 <li class="header-menu__nav-item">
-                                    <a class="header-menu__nav-link" href="#">
-                                        Конфиденциальности
+                                    <a class="header-menu__nav-link" href="./confidence.html">
+                                        Конфиденциальность
                                     </a>
                                 </li>
                                 <li class="header-menu__nav-item">
-                                    <a class="header-menu__nav-link" href="#">
+                                    <a class="header-menu__nav-link" href="./return.html">
                                         Обмен и возврат товара
                                     </a>
                                 </li>
@@ -1139,27 +1139,27 @@
                             </h4>
                             <ul class="header-menu__nav-list">
                                 <li class="header-menu__nav-item">
-                                    <a class="header-menu__nav-link" href="#">
+                                    <a class="header-menu__nav-link" href="./about.html">
                                         О компании
                                     </a>
                                 </li>
                                 <li class="header-menu__nav-item">
-                                    <a class="header-menu__nav-link" href="#">
+                                    <a class="header-menu__nav-link" href="./contacts.html">
                                         Контакты
                                     </a>
                                 </li>
                                 <li class="header-menu__nav-item">
-                                    <a class="header-menu__nav-link" href="#">
+                                    <a class="header-menu__nav-link" href="./news.html">
                                         Новости
                                     </a>
                                 </li>
                                 <li class="header-menu__nav-item">
-                                    <a class="header-menu__nav-link" href="#">
+                                    <a class="header-menu__nav-link" href="./referal.html">
                                         Реферальная программа
                                     </a>
                                 </li>
                                 <li class="header-menu__nav-item">
-                                    <a class="header-menu__nav-link" href="#">
+                                    <a class="header-menu__nav-link" href="./feedback.html">
                                         Обратная связь
                                     </a>
                                 </li>
@@ -1171,27 +1171,27 @@
                             </h4>
                             <ul class="header-menu__nav-list">
                                 <li class="header-menu__nav-item">
-                                    <a class="header-menu__nav-link" href="#">
+                                    <a class="header-menu__nav-link" href="./about.html">
                                         О компании
                                     </a>
                                 </li>
                                 <li class="header-menu__nav-item">
-                                    <a class="header-menu__nav-link" href="#">
+                                    <a class="header-menu__nav-link" href="./contacts.html">
                                         Контакты
                                     </a>
                                 </li>
                                 <li class="header-menu__nav-item">
-                                    <a class="header-menu__nav-link" href="#">
+                                    <a class="header-menu__nav-link" href="./news.html">
                                         Новости
                                     </a>
                                 </li>
                                 <li class="header-menu__nav-item">
-                                    <a class="header-menu__nav-link" href="#">
+                                    <a class="header-menu__nav-link" href="./referal.html">
                                         Реферальная программа
                                     </a>
                                 </li>
                                 <li class="header-menu__nav-item">
-                                    <a class="header-menu__nav-link" href="#">
+                                    <a class="header-menu__nav-link" href="./feedback.html">
                                         Обратная связь
                                     </a>
                                 </li>
@@ -1210,7 +1210,7 @@
                             </span>
 
                         </a>
-                        <a class="header-menu__panel-item" href="#">
+                        <a class="header-menu__panel-item" href="./compare.html">
                             <span class="header-menu__panel-img">
                                 <img src="./img/icons/compare.svg" alt="">
                             </span>
@@ -1220,7 +1220,7 @@
                                 </span>
                             </span>
                         </a>
-                        <a class="header-menu__panel-item" href="#">
+                        <a class="header-menu__panel-item" href="./favorites.html">
                             <span class="header-menu__panel-img">
                                 <img src="./img/icons/heart.svg" alt="">
                             </span>
@@ -1230,7 +1230,7 @@
                                 </span>
                             </span>
                         </a>
-                        <a class="header-menu__panel-item" href="#">
+                        <a class="header-menu__panel-item" href="./cart.html">
                             <span class="header-menu__panel-img">
                                 <img src="./img/icons/cart.svg" alt="">
                             </span>
