--- a/catalog.html
+++ b/catalog.html
@@ -17,7 +17,7 @@
                     <nav class="header__top-nav">
                         <ul class="header__top-list">
                             <li class="header__top-item">
-                                <a class="header__top-link actions" href="#">
+                                <a class="header__top-link actions" href="./sale.html">
                                     Акции
                                     <svg width="9" height="12" viewBox="0 0 9 12" fill="none"
                                         xmlns="http://www.w3.org/2000/svg">
@@ -26,43 +26,43 @@
                                 </a>
                             </li>
                             <li class="header__top-item">
-                                <a class="header__top-link" href="#">Оплата</a>
+                                <a class="header__top-link" href="./payment.html">Оплата</a>
                             </li>
                             <li class="header__top-item">
-                                <a class="header__top-link" href="#">Доставка</a>
+                                <a class="header__top-link" href="./delivery.html">Доставка</a>
                             </li>
                             <li class="header__top-item">
-                                <a class="header__top-link" href="#">Каталог</a>
+                                <a class="header__top-link" href="./catalog.html">Каталог</a>
                             </li>
                             <li class="header__top-item">
-                                <a class="header__top-link" href="#">Контакты</a>
+                                <a class="header__top-link" href="./contacts.html">Контакты</a>
                             </li>
                         </ul>
                         <div class="header__top-info">
-                            <a class="header__top-link header__top-link--info" href="#">
+                            <a class="header__top-link header__top-link--info">
                                 Информация для клиентов и партнеров
                             </a>
                             <ul class="header__top-info-dropdown">
                                 <li>
-                                    <a href="#">О компании</a>
+                                    <a href="./about.html">О компании</a>
                                 </li>
                                 <li>
-                                    <a href="#">Новости</a>
+                                    <a href="./news.html">Новости</a>
                                 </li>
                                 <li>
-                                    <a href="#">Бонусная программа</a>
+                                    <a href="./bonus.html">Бонусная программа</a>
                                 </li>
                                 <li>
-                                    <a href="#">Обмен и возврат товара</a>
+                                    <a href="./return.html">Обмен и возврат товара</a>
                                 </li>
                                 <li>
-                                    <a href="#">Сервисные центры</a>
+                                    <a href="./service.html">Сервисные центры</a>
                                 </li>
                                 <li>
-                                    <a href="#">Конфиденциальность</a>
+                                    <a href="./confidence.html">Конфиденциальность</a>
                                 </li>
                                 <li>
-                                    <a href="#">Обратная связь</a>
+                                    <a href="./feedback.html">Обратная связь</a>
                                 </li>
                             </ul>
                         </div>
@@ -97,7 +97,7 @@
                             </div>
                         </div>
                         <form class="header__search" action="#">
-                            <input class="header__search-input" type="search" name="header-search" placeholder="Поиск">
+                            <input class="header__search-input" type="search" name="search" placeholder="Поиск">
                             <button class="header__search-submit" type="submit" name="searchSubmit" value=""
                                 aria-label="Кнопка поиска">
                                 <img src="./img/icons/search-icon.svg" alt="">
@@ -146,7 +146,7 @@
                                     </div>
 
                                 </div>
-                                <a class="rect-btn rect-btn--search-result blue" href="#">Все результаты</a>
+                                <a class="rect-btn rect-btn--search-result blue" href="./search.html">Все результаты</a>
                             </div>
                         </form>
 
@@ -179,13 +179,13 @@
                                 </div>
                             </div>
                             <div class="header-panel__item">
-                                <a class="round-btn round-btn--header" href="#">
+                                <a class="round-btn round-btn--header" href="./favorites.html">
                                     <img src="./img/icons/heart.svg" alt="Избранное">
                                 </a>
                                 <span>5</span>
                             </div>
                             <div class="header-panel__item">
-                                <a class="round-btn round-btn--header" href="#">
+                                <a class="round-btn round-btn--header" href="./compare.html">
                                     <img src="./img/icons/compare.svg" alt="Сравнение">
                                 </a>
                                 <span>99</span>
@@ -311,7 +311,7 @@
                                                     0 ₽
                                                 </p>
                                             </div>
-                                            <a class="rect-btn rect-btn--cart-popup blue" href="#">
+                                            <a class="rect-btn rect-btn--cart-popup blue" href="./catalog.html">
                                                 Перейти в каталог
                                             </a>
                                         </div>
@@ -456,13 +456,13 @@
                                 </div>
                             </div>
                             <div class="header-panel__item">
-                                <a class="round-btn round-btn--header" href="#">
+                                <a class="round-btn round-btn--header" href="./favorites.html">
                                     <img src="./img/icons/heart.svg" alt="Избранное">
                                 </a>
                                 <span>5</span>
                             </div>
                             <div class="header-panel__item">
-                                <a class="round-btn round-btn--header" href="#">
+                                <a class="round-btn round-btn--header" href="./compare.html">
                                     <img src="./img/icons/compare.svg" alt="Сравнение">
                                 </a>
                                 <span>99</span>
@@ -588,7 +588,7 @@
                                                     0 ₽
                                                 </p>
                                             </div>
-                                            <a class="rect-btn rect-btn--cart-popup blue" href="#">
+                                            <a class="rect-btn rect-btn--cart-popup blue" href="./catalog.html">
                                                 Перейти в каталог
                                             </a>
                                         </div>
@@ -630,8 +630,7 @@
                                         </div>
                                     </li>
                                     <li class="catalog-popup__menu-item">
-                                        <a class="catalog-popup__menu-link" href="./category.html">Стиральные и
-                                            сушильные
+                                        <a class="catalog-popup__menu-link" href="./category.html">Стиральные и сушильные
                                             машины</a>
                                         <div class="catalog-popup__meni-icon">
                                             <svg width="7" height="8" viewBox="0 0 7 8" fill="none"
@@ -691,8 +690,7 @@
                                         </div>
                                     </li>
                                     <li class="catalog-popup__menu-item">
-                                        <a class="catalog-popup__menu-link" href="./category.html">Техника для
-                                            уборки</a>
+                                        <a class="catalog-popup__menu-link" href="./category.html">Техника для уборки</a>
                                         <div class="catalog-popup__meni-icon">
                                             <svg width="7" height="8" viewBox="0 0 7 8" fill="none"
                                                 xmlns="http://www.w3.org/2000/svg">
@@ -1034,7 +1032,7 @@
                                     </div>
 
                                 </div>
-                                <a class="rect-btn rect-btn--search-result blue" href="#">Все результаты</a>
+                                <a class="rect-btn rect-btn--search-result blue" href="./search.html">Все результаты</a>
                             </div>
                         </form>
                     </div>
@@ -1095,7 +1093,7 @@
                                     </a>
                                 </li>
                                 <li class="header-menu__nav-item">
-                                    <a class="header-menu__nav-link header-menu__nav-link--show" href="#">
+                                    <a class="header-menu__nav-link header-menu__nav-link--show" href="./catalog.html">
                                         Показать все
                                     </a>
                                 </li>
@@ -1107,27 +1105,27 @@
                             </h4>
                             <ul class="header-menu__nav-list">
                                 <li class="header-menu__nav-item">
-                                    <a class="header-menu__nav-link" href="#">
+                                    <a class="header-menu__nav-link" href="./delivery.html">
                                         Доставка
                                     </a>
                                 </li>
                                 <li class="header-menu__nav-item">
-                                    <a class="header-menu__nav-link" href="#">
+                                    <a class="header-menu__nav-link" href="./guarantee.html">
                                         Гарантия
                                     </a>
                                 </li>
                                 <li class="header-menu__nav-item">
-                                    <a class="header-menu__nav-link" href="#">
+                                    <a class="header-menu__nav-link" href="./service.html">
                                         Сервисные центры
                                     </a>
                                 </li>
                                 <li class="header-menu__nav-item">
-                                    <a class="header-menu__nav-link" href="#">
-                                        Конфиденциальности
+                                    <a class="header-menu__nav-link" href="./confidence.html">
+                                        Конфиденциальность
                                     </a>
                                 </li>
                                 <li class="header-menu__nav-item">
-                                    <a class="header-menu__nav-link" href="#">
+                                    <a class="header-menu__nav-link" href="./return.html">
                                         Обмен и возврат товара
                                     </a>
                                 </li>
@@ -1139,27 +1137,27 @@
                             </h4>
                             <ul class="header-menu__nav-list">
                                 <li class="header-menu__nav-item">
-                                    <a class="header-menu__nav-link" href="#">
+                                    <a class="header-menu__nav-link" href="./about.html">
                                         О компании
                                     </a>
                                 </li>
                                 <li class="header-menu__nav-item">
-                                    <a class="header-menu__nav-link" href="#">
+                                    <a class="header-menu__nav-link" href="./contacts.html">
                                         Контакты
                                     </a>
                                 </li>
                                 <li class="header-menu__nav-item">
-                                    <a class="header-menu__nav-link" href="#">
+                                    <a class="header-menu__nav-link" href="./news.html">
                                         Новости
                                     </a>
                                 </li>
                                 <li class="header-menu__nav-item">
-                                    <a class="header-menu__nav-link" href="#">
+                                    <a class="header-menu__nav-link" href="./referal.html">
                                         Реферальная программа
                                     </a>
                                 </li>
                                 <li class="header-menu__nav-item">
-                                    <a class="header-menu__nav-link" href="#">
+                                    <a class="header-menu__nav-link" href="./feedback.html">
                                         Обратная связь
                                     </a>
                                 </li>
@@ -1171,27 +1169,27 @@
                             </h4>
                             <ul class="header-menu__nav-list">
                                 <li class="header-menu__nav-item">
-                                    <a class="header-menu__nav-link" href="#">
+                                    <a class="header-menu__nav-link" href="./about.html">
                                         О компании
                                     </a>
                                 </li>
                                 <li class="header-menu__nav-item">
-                                    <a class="header-menu__nav-link" href="#">
+                                    <a class="header-menu__nav-link" href="./contacts.html">
                                         Контакты
                                     </a>
                                 </li>
                                 <li class="header-menu__nav-item">
-                                    <a class="header-menu__nav-link" href="#">
+                                    <a class="header-menu__nav-link" href="./news.html">
                                         Новости
                                     </a>
                                 </li>
                                 <li class="header-menu__nav-item">
-                                    <a class="header-menu__nav-link" href="#">
+                                    <a class="header-menu__nav-link" href="./referal.html">
                                         Реферальная программа
                                     </a>
                                 </li>
                                 <li class="header-menu__nav-item">
-                                    <a class="header-menu__nav-link" href="#">
+                                    <a class="header-menu__nav-link" href="./feedback.html">
                                         Обратная связь
                                     </a>
                                 </li>
@@ -1210,7 +1208,7 @@
                             </span>
 
                         </a>
-                        <a class="header-menu__panel-item" href="#">
+                        <a class="header-menu__panel-item" href="./compare.html">
                             <span class="header-menu__panel-img">
                                 <img src="./img/icons/compare.svg" alt="">
                             </span>
@@ -1220,7 +1218,7 @@
                                 </span>
                             </span>
                         </a>
-                        <a class="header-menu__panel-item" href="#">
+                        <a class="header-menu__panel-item" href="./favorites.html">
                             <span class="header-menu__panel-img">
                                 <img src="./img/icons/heart.svg" alt="">
                             </span>
@@ -1230,7 +1228,7 @@
                                 </span>
                             </span>
                         </a>
-                        <a class="header-menu__panel-item" href="#">
+                        <a class="header-menu__panel-item" href="./cart.html">
                             <span class="header-menu__panel-img">
                                 <img src="./img/icons/cart.svg" alt="">
                             </span>
@@ -1300,6 +1298,7 @@
                         </a>
                     </div>
                 </div>
+
             </div>
         </header>
 
@@ -1919,7 +1918,7 @@
                                     </a>
                                 </li>
                                 <li class="footer__nav-item">
-                                    <a class="footer__nav-link footer__nav-link--show" href="#">
+                                    <a class="footer__nav-link footer__nav-link--show" href="./catalog.html">
                                         Показать все
                                     </a>
                                 </li>
@@ -2432,6 +2431,7 @@
         });
     </script>
     <script src="./js/catalog.js" type="module"></script>
+    <script src="./js/mobile.js" type="module"></script>
 </body>
 
 </html>
