--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <nav class="header__top-nav">
                         <ul class="header__top-list">
                             <li class="header__top-item">
-                                <a class="header__top-link actions" href="#">
+                                <a class="header__top-link actions" href="./sale.html">
                                     Акции
                                     <svg width="9" height="12" viewBox="0 0 9 12" fill="none"
                                         xmlns="http://www.w3.org/2000/svg">
@@ -29,43 +29,43 @@
                                 </a>
                             </li>
                             <li class="header__top-item">
-                                <a class="header__top-link" href="#">Оплата</a>
+                                <a class="header__top-link" href="./payment.html">Оплата</a>
                             </li>
                             <li class="header__top-item">
-                                <a class="header__top-link" href="#">Доставка</a>
+                                <a class="header__top-link" href="./delivery.html">Доставка</a>
                             </li>
                             <li class="header__top-item">
-                                <a class="header__top-link" href="#">Каталог</a>
+                                <a class="header__top-link" href="./catalog.html">Каталог</a>
                             </li>
                             <li class="header__top-item">
-                                <a class="header__top-link" href="#">Контакты</a>
+                                <a class="header__top-link" href="./contacts.html">Контакты</a>
                             </li>
                         </ul>
                         <div class="header__top-info">
-                            <a class="header__top-link header__top-link--info" href="#">
+                            <a class="header__top-link header__top-link--info">
                                 Информация для клиентов и партнеров
                             </a>
                             <ul class="header__top-info-dropdown">
                                 <li>
-                                    <a href="#">О компании</a>
+                                    <a href="./about.html">О компании</a>
                                 </li>
                                 <li>
-                                    <a href="#">Новости</a>
+                                    <a href="./news.html">Новости</a>
                                 </li>
                                 <li>
-                                    <a href="#">Бонусная программа</a>
+                                    <a href="./bonus.html">Бонусная программа</a>
                                 </li>
                                 <li>
-                                    <a href="#">Обмен и возврат товара</a>
+                                    <a href="./return.html">Обмен и возврат товара</a>
                                 </li>
                                 <li>
-                                    <a href="#">Сервисные центры</a>
+                                    <a href="./service.html">Сервисные центры</a>
                                 </li>
                                 <li>
-                                    <a href="#">Конфиденциальность</a>
+                                    <a href="./confidence.html">Конфиденциальность</a>
                                 </li>
                                 <li>
-                                    <a href="#">Обратная связь</a>
+                                    <a href="./feedback.html">Обратная связь</a>
                                 </li>
                             </ul>
                         </div>
@@ -100,7 +100,7 @@
                             </div>
                         </div>
                         <form class="header__search" action="#">
-                            <input class="header__search-input" type="search" name="header-search" placeholder="Поиск">
+                            <input class="header__search-input" type="search" name="search" placeholder="Поиск">
                             <button class="header__search-submit" type="submit" name="searchSubmit" value=""
                                 aria-label="Кнопка поиска">
                                 <img src="./img/icons/search-icon.svg" alt="">
@@ -149,7 +149,7 @@
                                     </div>
 
                                 </div>
-                                <a class="rect-btn rect-btn--search-result blue" href="#">Все результаты</a>
+                                <a class="rect-btn rect-btn--search-result blue" href="./search.html">Все результаты</a>
                             </div>
                         </form>
 
@@ -182,13 +182,13 @@
                                 </div>
                             </div>
                             <div class="header-panel__item">
-                                <a class="round-btn round-btn--header" href="#">
+                                <a class="round-btn round-btn--header" href="./favorites.html">
                                     <img src="./img/icons/heart.svg" alt="Избранное">
                                 </a>
                                 <span>5</span>
                             </div>
                             <div class="header-panel__item">
-                                <a class="round-btn round-btn--header" href="#">
+                                <a class="round-btn round-btn--header" href="./compare.html">
                                     <img src="./img/icons/compare.svg" alt="Сравнение">
                                 </a>
                                 <span>99</span>
@@ -314,7 +314,7 @@
                                                     0 ₽
                                                 </p>
                                             </div>
-                                            <a class="rect-btn rect-btn--cart-popup blue" href="#">
+                                            <a class="rect-btn rect-btn--cart-popup blue" href="./catalog.html">
                                                 Перейти в каталог
                                             </a>
                                         </div>
@@ -459,13 +459,13 @@
                                 </div>
                             </div>
                             <div class="header-panel__item">
-                                <a class="round-btn round-btn--header" href="#">
+                                <a class="round-btn round-btn--header" href="./favorites.html">
                                     <img src="./img/icons/heart.svg" alt="Избранное">
                                 </a>
                                 <span>5</span>
                             </div>
                             <div class="header-panel__item">
-                                <a class="round-btn round-btn--header" href="#">
+                                <a class="round-btn round-btn--header" href="./compare.html">
                                     <img src="./img/icons/compare.svg" alt="Сравнение">
                                 </a>
                                 <span>99</span>
@@ -591,7 +591,7 @@
                                                     0 ₽
                                                 </p>
                                             </div>
-                                            <a class="rect-btn rect-btn--cart-popup blue" href="#">
+                                            <a class="rect-btn rect-btn--cart-popup blue" href="./catalog.html">
                                                 Перейти в каталог
                                             </a>
                                         </div>
@@ -1035,7 +1035,7 @@
                                     </div>
 
                                 </div>
-                                <a class="rect-btn rect-btn--search-result blue" href="#">Все результаты</a>
+                                <a class="rect-btn rect-btn--search-result blue" href="./search.html">Все результаты</a>
                             </div>
                         </form>
                     </div>
@@ -1096,7 +1096,7 @@
                                     </a>
                                 </li>
                                 <li class="header-menu__nav-item">
-                                    <a class="header-menu__nav-link header-menu__nav-link--show" href="#">
+                                    <a class="header-menu__nav-link header-menu__nav-link--show" href="./catalog.html">
                                         Показать все
                                     </a>
                                 </li>
@@ -1108,27 +1108,27 @@
                             </h4>
                             <ul class="header-menu__nav-list">
                                 <li class="header-menu__nav-item">
-                                    <a class="header-menu__nav-link" href="#">
+                                    <a class="header-menu__nav-link" href="./delivery.html">
                                         Доставка
                                     </a>
                                 </li>
                                 <li class="header-menu__nav-item">
-                                    <a class="header-menu__nav-link" href="#">
+                                    <a class="header-menu__nav-link" href="./guarantee.html">
                                         Гарантия
                                     </a>
                                 </li>
                                 <li class="header-menu__nav-item">
-                                    <a class="header-menu__nav-link" href="#">
+                                    <a class="header-menu__nav-link" href="./service.html">
                                         Сервисные центры
                                     </a>
                                 </li>
                                 <li class="header-menu__nav-item">
-                                    <a class="header-menu__nav-link" href="#">
-                                        Конфиденциальности
+                                    <a class="header-menu__nav-link" href="./confidence.html">
+                                        Конфиденциальность
                                     </a>
                                 </li>
                                 <li class="header-menu__nav-item">
-                                    <a class="header-menu__nav-link" href="#">
+                                    <a class="header-menu__nav-link" href="./return.html">
                                         Обмен и возврат товара
                                     </a>
                                 </li>
@@ -1140,27 +1140,27 @@
                             </h4>
                             <ul class="header-menu__nav-list">
                                 <li class="header-menu__nav-item">
-                                    <a class="header-menu__nav-link" href="#">
+                                    <a class="header-menu__nav-link" href="./about.html">
                                         О компании
                                     </a>
                                 </li>
                                 <li class="header-menu__nav-item">
-                                    <a class="header-menu__nav-link" href="#">
+                                    <a class="header-menu__nav-link" href="./contacts.html">
                                         Контакты
                                     </a>
                                 </li>
                                 <li class="header-menu__nav-item">
-                                    <a class="header-menu__nav-link" href="#">
+                                    <a class="header-menu__nav-link" href="./news.html">
                                         Новости
                                     </a>
                                 </li>
                                 <li class="header-menu__nav-item">
-                                    <a class="header-menu__nav-link" href="#">
+                                    <a class="header-menu__nav-link" href="./referal.html">
                                         Реферальная программа
                                     </a>
                                 </li>
                                 <li class="header-menu__nav-item">
-                                    <a class="header-menu__nav-link" href="#">
+                                    <a class="header-menu__nav-link" href="./feedback.html">
                                         Обратная связь
                                     </a>
                                 </li>
@@ -1172,27 +1172,27 @@
                             </h4>
                             <ul class="header-menu__nav-list">
                                 <li class="header-menu__nav-item">
-                                    <a class="header-menu__nav-link" href="#">
+                                    <a class="header-menu__nav-link" href="./about.html">
                                         О компании
                                     </a>
                                 </li>
                                 <li class="header-menu__nav-item">
-                                    <a class="header-menu__nav-link" href="#">
+                                    <a class="header-menu__nav-link" href="./contacts.html">
                                         Контакты
                                     </a>
                                 </li>
                                 <li class="header-menu__nav-item">
-                                    <a class="header-menu__nav-link" href="#">
+                                    <a class="header-menu__nav-link" href="./news.html">
                                         Новости
                                     </a>
                                 </li>
                                 <li class="header-menu__nav-item">
-                                    <a class="header-menu__nav-link" href="#">
+                                    <a class="header-menu__nav-link" href="./referal.html">
                                         Реферальная программа
                                     </a>
                                 </li>
                                 <li class="header-menu__nav-item">
-                                    <a class="header-menu__nav-link" href="#">
+                                    <a class="header-menu__nav-link" href="./feedback.html">
                                         Обратная связь
                                     </a>
                                 </li>
@@ -1209,9 +1209,9 @@
                                     Личный кабинет
                                 </span>
                             </span>
-    
+
                         </a>
-                        <a class="header-menu__panel-item" href="#">
+                        <a class="header-menu__panel-item" href="./compare.html">
                             <span class="header-menu__panel-img">
                                 <img src="./img/icons/compare.svg" alt="">
                             </span>
@@ -1221,7 +1221,7 @@
                                 </span>
                             </span>
                         </a>
-                        <a class="header-menu__panel-item" href="#">
+                        <a class="header-menu__panel-item" href="./favorites.html">
                             <span class="header-menu__panel-img">
                                 <img src="./img/icons/heart.svg" alt="">
                             </span>
@@ -1231,7 +1231,7 @@
                                 </span>
                             </span>
                         </a>
-                        <a class="header-menu__panel-item" href="#">
+                        <a class="header-menu__panel-item" href="./cart.html">
                             <span class="header-menu__panel-img">
                                 <img src="./img/icons/cart.svg" alt="">
                             </span>
@@ -1290,8 +1290,9 @@
                             aria-label="Перейти на YouTube-канал компании">
                             <img src="./img/icons/footer/youtube.svg" alt="">
                         </a>
-                        <a class="header-menu-link round-btn round-btn--header-menu telegram" href="https://t.me/ekromshop"
-                            target="_blank" aria-label="Перейти в телеграм-канал компании">
+                        <a class="header-menu-link round-btn round-btn--header-menu telegram"
+                            href="https://t.me/ekromshop" target="_blank"
+                            aria-label="Перейти в телеграм-канал компании">
                             <img src="./img/icons/footer/telegram.svg" alt="">
                         </a>
                         <a class="header-menu-link round-btn round-btn--header-menu whatsapp" href="#"
@@ -1300,6 +1301,7 @@
                         </a>
                     </div>
                 </div>
+
             </div>
         </header>
 
@@ -4839,7 +4841,7 @@
                                     </a>
                                 </li>
                                 <li class="footer__nav-item">
-                                    <a class="footer__nav-link footer__nav-link--show" href="#">
+                                    <a class="footer__nav-link footer__nav-link--show" href="./catalog.html">
                                         Показать все
                                     </a>
                                 </li>
