Сверстал страницу сравнения вместе с адаптивом

--- a/404.html
+++ b/404.html
@@ -185,20 +185,20 @@
                                 <a class="round-btn round-btn--header" href="./favorites.html">
                                     <img src="./img/icons/heart.svg" alt="Избранное">
                                 </a>
-                                <span>5</span>
+                                <span class="round-btn-counter">5</span>
                             </div>
                             <div class="header-panel__item">
                                 <a class="round-btn round-btn--header" href="./compare.html">
                                     <img src="./img/icons/compare.svg" alt="Сравнение">
                                 </a>
-                                <span>99</span>
+                                <span class="round-btn-counter">99</span>
                             </div>
 
                             <div class="header-panel__item cart-item">
                                 <a class="round-btn round-btn--header" href="./cart.html">
                                     <img src="./img/icons/cart.svg" alt="Корзина">
                                 </a>
-                                <span>3</span>
+                                <span class="round-btn-counter">3</span>
                                 <div class="cart-popup">
                                     <div class="cart-popup__inner cart-popup__inner--has-items">
                                         <div class="cart-popup__header">
@@ -462,20 +462,20 @@
                                 <a class="round-btn round-btn--header" href="./favorites.html">
                                     <img src="./img/icons/heart.svg" alt="Избранное">
                                 </a>
-                                <span>5</span>
+                                <span class="round-btn-counter">5</span>
                             </div>
                             <div class="header-panel__item">
                                 <a class="round-btn round-btn--header" href="./compare.html">
                                     <img src="./img/icons/compare.svg" alt="Сравнение">
                                 </a>
-                                <span>99</span>
+                                <span class="round-btn-counter">99</span>
                             </div>
 
                             <div class="header-panel__item cart-item">
                                 <a class="round-btn round-btn--header" href="./cart.html">
                                     <img src="./img/icons/cart.svg" alt="Корзина">
                                 </a>
-                                <span>3</span>
+                                <span class="round-btn-counter">3</span>
                                 <div class="cart-popup">
                                     <div class="cart-popup__inner cart-popup__inner--has-items">
                                         <div class="cart-popup__header">
@@ -633,8 +633,7 @@
                                         </div>
                                     </li>
                                     <li class="catalog-popup__menu-item">
-                                        <a class="catalog-popup__menu-link" href="./category.html">Стиральные и
-                                            сушильные
+                                        <a class="catalog-popup__menu-link" href="./category.html">Стиральные и сушильные
                                             машины</a>
                                         <div class="catalog-popup__meni-icon">
                                             <svg width="7" height="8" viewBox="0 0 7 8" fill="none"
@@ -694,8 +693,7 @@
                                         </div>
                                     </li>
                                     <li class="catalog-popup__menu-item">
-                                        <a class="catalog-popup__menu-link" href="./category.html">Техника для
-                                            уборки</a>
+                                        <a class="catalog-popup__menu-link" href="./category.html">Техника для уборки</a>
                                         <div class="catalog-popup__meni-icon">
                                             <svg width="7" height="8" viewBox="0 0 7 8" fill="none"
                                                 xmlns="http://www.w3.org/2000/svg">
@@ -1535,7 +1533,7 @@
                                         </ul>
                                     </div>
                                 </div>
-
+                                
                                 <div class="promo-banner" style="background-image: url('./img/catalog-banner.png');">
                                     <p class="catalog-popup__categories-text">
                                         Не можете выбрать?
