--- a/order.html
+++ b/order.html
@@ -179,20 +179,20 @@
                                 <a class="round-btn round-btn--header" href="./favorites.html">
                                     <img src="./img/icons/heart.svg" alt="Избранное">
                                 </a>
-                                <span>5</span>
+                                <span class="round-btn-counter">5</span>
                             </div>
                             <div class="header-panel__item">
                                 <a class="round-btn round-btn--header" href="./compare.html">
                                     <img src="./img/icons/compare.svg" alt="Сравнение">
                                 </a>
-                                <span>99</span>
+                                <span class="round-btn-counter">99</span>
                             </div>
 
                             <div class="header-panel__item cart-item">
                                 <a class="round-btn round-btn--header" href="./cart.html">
                                     <img src="./img/icons/cart.svg" alt="Корзина">
                                 </a>
-                                <span>3</span>
+                                <span class="round-btn-counter">3</span>
                                 <div class="cart-popup">
                                     <div class="cart-popup__inner cart-popup__inner--has-items">
                                         <div class="cart-popup__header">
@@ -456,20 +456,20 @@
                                 <a class="round-btn round-btn--header" href="./favorites.html">
                                     <img src="./img/icons/heart.svg" alt="Избранное">
                                 </a>
-                                <span>5</span>
+                                <span class="round-btn-counter">5</span>
                             </div>
                             <div class="header-panel__item">
                                 <a class="round-btn round-btn--header" href="./compare.html">
                                     <img src="./img/icons/compare.svg" alt="Сравнение">
                                 </a>
-                                <span>99</span>
+                                <span class="round-btn-counter">99</span>
                             </div>
 
                             <div class="header-panel__item cart-item">
                                 <a class="round-btn round-btn--header" href="./cart.html">
                                     <img src="./img/icons/cart.svg" alt="Корзина">
                                 </a>
-                                <span>3</span>
+                                <span class="round-btn-counter">3</span>
                                 <div class="cart-popup">
                                     <div class="cart-popup__inner cart-popup__inner--has-items">
                                         <div class="cart-popup__header">
